# generate-sdk-from-openapi-schema-demo

./: .gitignore  README.md  package-lock.json  package.json  pre_process_schema.py  pyproject.toml  start-demo.sh
frontend/app/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/app/src/: App.tsx  main.tsx
frontend/app/src/pages/PostCreate/: index.tsx
frontend/app/src/pages/PostDetail/: index.tsx
frontend/src/: index.ts
node-service/: .gitignore  package-lock.json  package.json  tsconfig.json
node-service/src/: index.ts
src/: data.py  helpers.py  main.py  models.py  router.py
